fix overflow

--- a/client/views/Home/Widgets.styl
+++ b/client/views/Home/Widgets.styl
@@ -16,7 +16,7 @@
     .controls
       width: 100%
       text-align: left
-      padding: 10px
+      padding: 15px
       background: rgba(250, 250, 250, .2)
       .close
         absolute: top right
